--- a/UserForm.html
+++ b/UserForm.html
@@ -6,11 +6,87 @@
     <script src="https://cdn.jsdelivr.net/npm/jquery@3.3.1/dist/jquery.min.js"></script>
     <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/fomantic-ui@2.8.4/dist/semantic.min.css">
     <script src="https://cdn.jsdelivr.net/npm/fomantic-ui@2.8.4/dist/semantic.min.js"></script>
+
+    <script>
+        $(document)
+            .ready(function() {
+                $("#signUpLink").click(function(){
+                    $('.ui.modal').modal('show');
+                });
+            })
+        ;
+    </script>
 </head>
 <body>
-    <button class="ui primary basic button">Primary</button>
-    <button class="ui secondary basic button">Secondary</button>
-    <button class="ui positive basic button">Positive</button>
-    <button class="ui negative basic button">Negative</button>
+<div class="ui middle aligned center aligned grid">
+    <div class="column">
+        <h2 class="ui blue image header">
+            <img src="logo.png" class="image">
+            <div class="content">
+                Log-in to your account
+            </div>
+        </h2>
+        <form class="ui large form">
+            <div class="ui stacked segment">
+                <div class="field">
+                    <div class="ui left icon input">
+                        <i class="user icon"></i>
+                        <input type="text" name="username" placeholder="Username">
+                    </div>
+                </div>
+                <div class="field">
+                    <div class="ui left icon input">
+                        <i class="lock icon"></i>
+                        <input type="password" name="password" placeholder="Password">
+                    </div>
+                </div>
+                <div class="ui fluid large blue submit button">Login</div>
+            </div>
+
+            <div class="ui error message"></div>
+
+        </form>
+
+        <div class="ui message">
+            Don't have an account? <a href="#" id="signUpLink">Sign Up</a>
+        </div>
+    </div>
+</div>
+
+<!--Sign Up Modal-->
+<div class="ui modal">
+    <i class="close icon"></i>
+    <div class="header">
+        Sign Up
+    </div>
+    <div class="image content">
+        <div class="ui medium image">
+            <img src="logo.png">
+        </div>
+        <div class="description">
+            <div class="ui header">Enter a username and password below.</div>
+            <form class="ui large form">
+                <div class="ui stacked segment">
+                    <div class="field">
+                        <div class="ui left icon input">
+                            <i class="user icon"></i>
+                            <input type="text" name="username" placeholder="Username">
+                        </div>
+                    </div>
+                    <div class="field">
+                        <div class="ui left icon input">
+                            <i class="lock icon"></i>
+                            <input type="password" name="password" placeholder="Password">
+                        </div>
+                    </div>
+                    <div class="ui fluid large blue submit button">Create Account</div>
+                </div>
+
+                <div class="ui error message"></div>
+
+            </form>
+        </div>
+    </div>
+</div>
 </body>
 </html>
