--- a/UserForm.html
+++ b/UserForm.html
@@ -21,7 +21,7 @@
 <div class="ui middle aligned center aligned grid">
     <div class="column">
         <h2 class="ui blue image header">
-            <img src="logo.png" class="image">
+            <img src="../logo.png" class="image">
             <div class="content">
                 Log-in to your account
             </div>
@@ -61,7 +61,7 @@
     </div>
     <div class="image content">
         <div class="ui medium image">
-            <img src="logo.png">
+            <img src="../logo.png">
         </div>
         <div class="description">
             <div class="ui header">Enter a username and password below.</div>
