--- a/UserForm.html
+++ b/UserForm.html
@@ -7,17 +7,39 @@
     <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/fomantic-ui@2.8.4/dist/semantic.min.css">
     <script src="https://cdn.jsdelivr.net/npm/fomantic-ui@2.8.4/dist/semantic.min.js"></script>
 
-    <script>
-        $(document)
-            .ready(function() {
-                $("#signUpLink").click(function(){
-                    $('.ui.modal').modal('show');
-                });
-            })
-        ;
-    </script>
+    <script src="../UserForm.js"></script>
+
+    <style>
+        #loginWarning, #signUpSuccess {
+            margin-right: 200px;
+            margin-left: 200px;
+        }
+        .ui.middle.aligned.center.aligned.grid {
+            margin-right: 100px;
+            margin-left: 100px;
+        }
+    </style>
 </head>
 <body>
+<!--Login invalid message-->
+<div class="ui warning message" id="loginWarning">
+    <i class="close icon"></i>
+    <div class="header">
+        Username or password was incorrect!
+    </div>
+    Please try again.
+</div>
+
+<!--Sign Up Success-->
+<div class="ui positive message" id="signUpSuccess">
+    <i class="close icon"></i>
+    <div class="header">
+        Account Created!
+    </div>
+    You may log in.
+</div>
+
+<!--Login form-->
 <div class="ui middle aligned center aligned grid">
     <div class="column">
         <h2 class="ui blue image header">
@@ -40,7 +62,7 @@
                         <input type="password" name="password" placeholder="Password">
                     </div>
                 </div>
-                <div class="ui fluid large blue submit button">Login</div>
+                <div class="ui fluid large blue submit button" id="loginButton">Login</div>
             </div>
 
             <div class="ui error message"></div>
@@ -64,22 +86,36 @@
             <img src="../logo.png">
         </div>
         <div class="description">
+            <div class="ui warning message" id="signUpWarning">
+                <i class="close icon"></i>
+                <div class="header">
+                    Fields cannot be empty!
+                </div>
+                Please try again.
+            </div>
+            <div class="ui warning message" id="usernameTaken">
+                <i class="close icon"></i>
+                <div class="header">
+                    This username is taken!
+                </div>
+                Please try again.
+            </div>
             <div class="ui header">Enter a username and password below.</div>
             <form class="ui large form">
                 <div class="ui stacked segment">
                     <div class="field">
                         <div class="ui left icon input">
                             <i class="user icon"></i>
-                            <input type="text" name="username" placeholder="Username">
+                            <input type="text" name="username" placeholder="Username" id="signUpName">
                         </div>
                     </div>
                     <div class="field">
                         <div class="ui left icon input">
                             <i class="lock icon"></i>
-                            <input type="password" name="password" placeholder="Password">
+                            <input type="password" name="password" placeholder="Password" id="signUpPass">
                         </div>
                     </div>
-                    <div class="ui fluid large blue submit button">Create Account</div>
+                    <div class="ui fluid large blue submit button" id="signUpButton">Create Account</div>
                 </div>
 
                 <div class="ui error message"></div>
