--- a/feeds.html
+++ b/feeds.html
@@ -9,6 +9,10 @@
 <body>
 
 <div>
+    <button id="new-group-button">Create new group</button>
+</div>
+
+<div>
     <select id="page-selector" name="pages">
         <option value="individual-feed" id="individual-feed-option">Individual Feed</option>
     </select>
