Added get posts for individual users

--- a/feeds.html
+++ b/feeds.html
@@ -15,7 +15,7 @@
     <button id="feed-button">Go to feed</button>
 </div>
 
-<group id="individual-posts" style="display: none;">Individual posts</group>
+<group id="individual-posts" style="display: none;"></group>
 
 </body>
 </html>
