--- a/UserForm.html
+++ b/UserForm.html
@@ -53,13 +53,13 @@
                 <div class="field">
                     <div class="ui left icon input">
                         <i class="user icon"></i>
-                        <input type="text" name="username" placeholder="Username">
+                        <input type="text" name="username" placeholder="Username" id="loginName">
                     </div>
                 </div>
                 <div class="field">
                     <div class="ui left icon input">
                         <i class="lock icon"></i>
-                        <input type="password" name="password" placeholder="Password">
+                        <input type="password" name="password" placeholder="Password" id="loginPass">
                     </div>
                 </div>
                 <div class="ui fluid large blue submit button" id="loginButton">Login</div>
