populate userID in feeds.js

--- a/feeds.html
+++ b/feeds.html
@@ -5,12 +5,11 @@
     <title>Feeds</title>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/fomantic-ui@2.8.4/dist/semantic.min.css">
+    <script src="https://cdn.jsdelivr.net/npm/fomantic-ui@2.8.4/dist/semantic.min.js"></script>
     <script src="feeds-script.js"></script>
-
-
 </head>
 <body>
-
+<span style="display: none;" id="getUserID" th:text="${userID}"></span>
 <div>
     <button id="new-group-button">Create new group</button>
 </div>
