WIP summary modal

--- a/feeds.html
+++ b/feeds.html
@@ -9,11 +9,13 @@
     <script src="feeds-script.js"></script>
 </head>
 <body>
+<!--Hidden span used to getUserID-->
 <span style="display: none;" id="getUserID" th:text="${userID}"></span>
+
 <div>
     <button id="new-group-button">Create new group</button>
-</div>
-<br>
+</div><br>
+
 <div>
     <select id="page-selector" name="pages">
         <option value="individual-feed" id="individual-feed-option">Individual Feed</option>
@@ -21,8 +23,10 @@
     <button id="feed-button">Go to feed</button>
 </div>
 
-
 <group id="individual-posts" style="display: none;">Individual posts</group>
+
+<group id="individual-posts" style="display: none;"></group>
+
 <!-- Create Activity Button -->
 <footer class = "bottom">
     <div class = "ui container">
@@ -31,7 +35,7 @@
 </footer>
 
 <!-- Create Activity Modal-->
-<div class="ui modal">
+<div class="ui modal" id="createActivityModal">
     <i class="close icon"></i>
     <div class="header">
         Create Activity
@@ -77,8 +81,42 @@
     </div>
 </div>
 
-<group id="individual-posts" style="display: none;"></group>
+<!--test button-->
+<div class="ui primary button" id="testButton">Test Summary</div>
 
+<!--Get summary modal-->
+<div class="ui modal" id="summaryModal">
+    <i class="close icon"></i>
+    <div class="header" id="summaryHeader"></div>
+    <div class="image content">
+        <div class="ui medium image">
+            <img src="../logo.png">
+        </div>
+        <div class="description">
+            <div class="ui header">Enter a username and password below.</div>
+            <form class="ui large form">
+                <div class="ui stacked segment">
+                    <div class="field">
+                        <div class="ui left icon input">
+                            <i class="user icon"></i>
+                            <input type="text" name="username" placeholder="Username" id="signUpName">
+                        </div>
+                    </div>
+                    <div class="field">
+                        <div class="ui left icon input">
+                            <i class="lock icon"></i>
+                            <input type="password" name="password" placeholder="Password" id="signUpPass">
+                        </div>
+                    </div>
+                    <div class="ui fluid large blue submit button" id="signUpButton">Create Account</div>
+                </div>
+
+                <div class="ui error message"></div>
+
+            </form>
+        </div>
+    </div>
+</div>
 
 </body>
 </html>
