--- a/feeds.html
+++ b/feeds.html
@@ -89,6 +89,7 @@
                     <textarea name = "activity_description" placeholder="Enter details about your activity!">
                     </textarea>
                 </div>
+                <div class="ui primary button" id="submitActivity">Submit Activity </div>
             </form>
         </div>
     </div>
