Fixed broken changes

--- a/feeds.html
+++ b/feeds.html
@@ -64,36 +64,37 @@
                     <div class="two fields">
                         <div class="sixteen wide field">
                             <label>Name</label>
-                            <input type="text" name="activity_name" placeholder="Activity Name">
+                            <input type="text" name="activity_name" placeholder="Activity Name" id="activityTitle">
                         </div>
                         <div class="field">
                             <label>Distance</label>
-                            <input type="text" name="activity_distance" placeholder="Distance">
+                            <input type="text" name="activity_distance" placeholder="Distance" id="activityDistance">
                         </div>
                     </div>
                     <label>Time</label>
                     <div class="three fields">
                         <div class="field">
-                            <input type="text" name ="activity_hours" placeholder="Time in hours">
+                            <input type="text" name ="activity_hours" placeholder="Time in hours" id="activityHours">
                         </div>
                         <div class="field">
-                            <input type="text" name ="activity_minutes" placeholder="Time in minutes">
+                            <input type="text" name ="activity_minutes" placeholder="Time in minutes" id = "activityMinutes">
                         </div>
                         <div class="field">
-                            <input type="text" name ="activity_seconds" placeholder="Time in seconds">
+                            <input type="text" name ="activity_seconds" placeholder="Time in seconds" id = "activitySeconds">
                         </div>
                     </div>
                 </div>
                 <div class="field">
                     <label>Description</label>
-                    <textarea name = "activity_description" placeholder="Enter details about your activity!">
+                    <textarea name = "activity_description" placeholder="Enter details about your activity!" id="activityDescription">
                     </textarea>
                 </div>
-                <div class="ui primary button" id="submitActivity">Submit Activity </div>
+                <div class="ui primary button" id="submitActivity">Submit Activity</div>
             </form>
         </div>
     </div>
 </div>
+
 
 <group id="individual-posts" style="display: none;"></group>
 
