--- a/feeds.html
+++ b/feeds.html
@@ -105,31 +105,14 @@
     <i class="close icon"></i>
     <div class="header" id="summaryHeader"></div>
     <div class="image content">
-        <div class="ui medium image">
+        <div class="ui small image">
             <img src="../logo.png">
         </div>
         <div class="description">
-            <div class="ui header">Enter a username and password below.</div>
-            <form class="ui large form">
-                <div class="ui stacked segment">
-                    <div class="field">
-                        <div class="ui left icon input">
-                            <i class="user icon"></i>
-                            <input type="text" name="username" placeholder="Username" id="signUpName">
-                        </div>
-                    </div>
-                    <div class="field">
-                        <div class="ui left icon input">
-                            <i class="lock icon"></i>
-                            <input type="password" name="password" placeholder="Password" id="signUpPass">
-                        </div>
-                    </div>
-                    <div class="ui fluid large blue submit button" id="signUpButton">Create Account</div>
-                </div>
-
-                <div class="ui error message"></div>
-
-            </form>
+            <div class="ui header" id="totalMileHead"></div>
+            <div id="totalMile"></div>
+            <div class="ui header" id="bestPaceHead"></div>
+            <div id="bestPace"></div>
         </div>
     </div>
 </div>
