Add delete user button.

--- a/UserForm.html
+++ b/UserForm.html
@@ -63,6 +63,8 @@
                     </div>
                 </div>
                 <div class="ui fluid large blue submit button" id="loginButton">Login</div>
+                <br>
+                <div class="ui red button" id="deleteButton">Delete User</div>
             </div>
 
             <div class="ui error message"></div>
