Add logout, format activity time

--- a/feeds.html
+++ b/feeds.html
@@ -12,6 +12,8 @@
 <!--Hidden span used to getUserID-->
 <span style="display: none;" id="getUserID" th:text="${userID}"></span>
 
+<button class="ui primary button" id="logoutButton">Logout</button>
+
 <div>
     <button id="new-group-button">Create new group</button>
 </div><br>
