Update individual feed posts UI.

--- a/feeds.html
+++ b/feeds.html
@@ -23,7 +23,7 @@
     <button id="feed-button">Go to feed</button>
 </div>
 
-<group id="individual-posts" style="display: none;"></group>
+<group class="ui feed" id="individual-posts" style="display: none;"></group>
 
 <!-- Create Activity Button -->
 <footer class = "bottom">
