--- a/feeds.html
+++ b/feeds.html
@@ -7,13 +7,12 @@
     <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/fomantic-ui@2.8.4/dist/semantic.min.css">
     <script src="https://cdn.jsdelivr.net/npm/fomantic-ui@2.8.4/dist/semantic.min.js"></script>
     <script src="feeds-script.js"></script>
-
-    <h1 align="center" class="ui header">
-        <img src="../logo.png" class="ui circular image">
-        Fitness Tracker
-    </h1>
 </head>
 <body>
+<h1 align="center" class="ui header">
+    <img src="../logo.png" class="ui image">
+    Fitness Tracker
+</h1>
 
 <!--Hidden span used to getUserID-->
 <span style="display: none;" id="getUserID" th:text="${userID}"></span>
@@ -41,8 +40,12 @@
             <button class="ui button" id="logoutButton">Logout</button>
         </div>
     </div>
-
 </div>
+
+<div id="summaryDiv">
+    <p id="welcomeName">Welcome, </p>
+</div>
+
 <group id="individual-posts" style="display: none;"></group>
 <!-- Create Activity Modal-->
 <div class="ui modal" id="createActivityModal">
@@ -109,8 +112,8 @@
     </div>
 </div>
 
-<!--test button-->
-<div class="ui primary button" id="testButton">Test Summary</div>
+<!--&lt;!&ndash;test button&ndash;&gt;-->
+<!--<div class="ui primary button" id="testButton">Test Summary</div>-->
 
 <!--Get summary modal-->
 <div class="ui modal" id="summaryModal">
