Feeds UI updates.

--- a/feeds.html
+++ b/feeds.html
@@ -3,8 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <title>Feeds</title>
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/fomantic-ui@2.8.4/dist/semantic.min.css">
+    <link rel="stylesheet" type="text/css" href="feeds-style.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/fomantic-ui@2.8.4/dist/semantic.min.js"></script>
     <script src="feeds-script.js"></script>
 
@@ -63,6 +64,7 @@
 </div>
 
 <group id="individual-posts" style="display: none;"></group>
+
 <!-- Create Activity Modal-->
 <div class="ui modal" id="createActivityModal">
     <i class="close icon"></i>
