Update mainpage header

--- a/feeds.html
+++ b/feeds.html
@@ -23,12 +23,19 @@
             margin: 0px 0px 0px 0px;
             padding: 0px 0px 0px 0px;
         }
+
+        #topHeader {
+            margin: 10px 0px 10px 0px;
+        }
+
+        #topLogo {
+            width: 60%;
+        }
     </style>
 </head>
 <body>
-<h1 align="center" class="ui header">
-    <img src="../logo.png" class="ui image">
-    Fitness Tracker
+<h1 align="center" class="ui header" id="topHeader">
+    <img src="../header.png" class="ui image" id="topLogo">
 </h1>
 
 <!--Hidden span used to getUserID-->
